--- a/client/styles/_logInScreen.css
+++ b/client/styles/_logInScreen.css
@@ -397,6 +397,55 @@
   flex-wrap: wrap;
 }
 
+.roster_abil_dist_black {
+  background-image: url("../img/dist_black.png");
+}
+
+.roster_abil_aim_black {
+  background-image: url("../img/aim_black.png");
+}
+
+.roster_abil_hurt_black {
+  background-image: url("../img/hurt_black.png");
+}
+
+.roster_abil_dist_white {
+  background-image: url("../img/dist_white.png");
+}
+
+.roster_abil_aim_white {
+  background-image: url("../img/aim_white.png");
+}
+
+.roster_abil_hurt_white {
+  background-image: url("../img/hurt_white.png");
+}
+
+.roster_abil_stats {
+  display: flex;
+  min-width: 15%;
+  max-width: 20%;
+  flex: 1;
+}
+
+.roster_abil_stats .roster_abil_column {
+  width: 33%;
+}
+
+.roster_abil_stats .roster_abil_column .roster_abil_icon {
+  height: 25%;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+
+.roster_abil_number {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 25%;
+}
+
 .card_skills {
   box-shadow: inset 0 0 3vh black;
   width: 100%;
@@ -536,13 +585,6 @@
   background-position: center;
 }
 
-.card_skills .selection_list_of_skills .card_list_item_black .roster_abil_stats .roster_abil_column .roster_abil_number {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 25%;
-}
-
 .card_skills .selection_list_of_skills .card_list_item_black .roster_abil_stats .roster_abil_column .roster_abil_dist_black {
   background-image: url("../img/dist_black.png");
 }
@@ -653,13 +695,6 @@
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
-}
-
-.card_skills .selection_list_of_skills .card_list_item_white .roster_abil_stats .roster_abil_column .roster_abil_number {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 25%;
 }
 
 .card_skills .selection_list_of_skills .card_list_item_white .roster_abil_stats .roster_abil_column .roster_abil_dist_white {
@@ -1090,4 +1125,12 @@
 
 .rd_inf_ani {
   animation: anime_letteros 1.3s forwards;
+}
+
+.roster_abil_number.smaller_num {
+  height: 21% !important;
+}
+
+.legendary {
+  box-shadow: inset 0 0 5vh goldenrod !important;
 }
