--- a/client/styles/gameCard.scss
+++ b/client/styles/gameCard.scss
@@ -10,14 +10,33 @@
     background-size: contain;
     background-position: center;
     background-image: url('../img/' + $icon + '_' + $phase + '.png');
+    top: -5.7vh;
+    position: relative;
 }
 $icons: 'skull' 'self' 'star' 'cogs';
 $phases:'black' 'white';
 $black: black;
 $white: white;
 @mixin phase_theme($phase){
-    @if $phase == 'black' { background-color: $black; color: $white;box-shadow: inset 0 0 3vh $white, 0 0 2vh $black;}; 
-    @if $phase == 'white' {background-color: $white; color: $black;box-shadow: inset 0 0 3vh $black, 0 0 2vh $black;};
+    @if $phase == 'black' { 
+        background-color: $black; 
+        color: white;
+        box-shadow: inset 0 0 3vh white, 0 0 2vh black;
+        text-shadow:0 0 2vh black, 0 0 1vh black, 0 0 1.5vh rgb(58, 14, 14);
+    };
+    @if $phase == 'white' {
+        background-color: $white; 
+        color: black;
+        box-shadow: inset 0 0 3vh black, 0 0 2vh black;
+        text-shadow:0 0 2vh white, 0 0 1vh white, 0 0 1.5vh rgb(164, 230, 224);
+    };
+}
+
+@mixin miniListImg ($icon, $phase){
+    @include phase_theme($phase);
+    background: center / 115% no-repeat url('../img/' + $icon + '_' + $phase + '.png');
+    font-size:79%;
+    line-height: 1.1rem;
 }
 
 @mixin all_skills {
@@ -50,11 +69,14 @@ $white: white;
                     flex:1;
                 }
                 .roster_abil_desc{
-                    font-size: 100%;
+                    padding-right:4%;
+                    font-size: 95%;
                     font-weight: 400;
                     line-height: 1.25;
                     letter-spacing: -.06vw;
                     height:auto;
+                    width:129%;
+                    position:relative;
                 }
             }
             .roster_abil_stats{
@@ -73,6 +95,15 @@ $white: white;
                     .roster_abil_aim_#{$phase}{ background-image: url('../img/aim_' + $phase + '.png'); }
                     .roster_abil_hurt_#{$phase}{ background-image: url('../img/hurt_' + $phase + '.png'); }
                 }
+            }
+        }
+    }
+}
+@mixin miniCardSkills {
+    @each $phase in $phases {
+        @each $icon in $icons {
+            .img_#{$icon}_#{$phase} {
+                @include miniListImg($icon, $phase);
             }
         }
     }
@@ -277,7 +308,7 @@ $white: white;
     background: center / 115% no-repeat url('../img/walk_black.png');
 }
 .claim.unit.black{ 
-    background: center / 115% no-repeat url('../img/claim.png');
+    display:none;//background: center / 115% no-repeat url('../img/claim.png');
 }
 .rally.unit.black{ 
     background: center / 115% no-repeat url('../img/recruit_black.png');
@@ -286,7 +317,7 @@ $white: white;
     background: center / 115% no-repeat url('../img/walk_white.png');
 }
 .claim.unit.white{ 
-    background: center / 115% no-repeat url('../img/claim.png');
+    display:none;//background: center / 115% no-repeat url('../img/claim.png');
 }
 .rally.unit.white{ 
     background: center / 115% no-repeat url('../img/recruit_white.png');
@@ -295,3 +326,57 @@ $white: white;
 .offset-health.right{left:-82%}
 .offset-protection.right{left:-61%}
 .offset-dodge.right{left:42%}
+.white p {
+    color:black;
+    text-shadow:0px .1vw white;
+}
+.black p {
+    color:white;
+    text-shadow:0px .1vw black;
+}
+.speed.white{
+    background: center / 115% no-repeat url('../img/walk_black.svg');color:black;
+}
+.speed.black{
+    background: center / 115% no-repeat url('../img/walk_white.svg');color:white;
+}
+.dodge.white{
+    background: center / 115% no-repeat url('../img/dodge_white.svg');color:black;
+}
+.dodge.black{
+    background: center / 115% no-repeat url('../img/dodge_black.svg');color:white;
+}
+.protection.white{
+    background: center / 115% no-repeat url('../img/shield_white.svg');color:black;
+}
+.protection.black{
+    background: center / 115% no-repeat url('../img/shield_black.svg');color:white;
+}
+.health.white{
+    background: center / 115% no-repeat url('../img/heart_white.svg');color:black;
+}
+.health.black{
+    background: center / 115% no-repeat url('../img/heart_black.svg');color:white;
+}
+
+.smallCard p{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    z-index:21;
+    @include instaFlex; 
+    font-size:130%;
+    font-weight: 900;
+}
+.list{
+    @include miniCardSkills;
+    max-width:56%
+}
+.list.right{
+    margin-left:-10vh;
+}
+.roster_abil_description.left{left: -23%!important;}
