--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -132,7 +132,6 @@
   height: 100vh;
   width: 100vw;
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   padding: 0;
@@ -310,11 +309,11 @@ body {
 .puller.right {
   border-radius: 50% 0 0 50%;
   top: -43vh;
-  left: -3vw;
+  left: -40%;
 }
 
 .puller.left {
   border-radius: 0 50% 50% 0;
   top: -36vh;
-  left: 9.5vw;
+  right: -80%;
 }
