mini and big cards automated and animated as well as with events. working on deployment tray now.

--- a/client/styles/gameCard.css
+++ b/client/styles/gameCard.css
@@ -9,6 +9,17 @@
   flex-wrap: wrap;
 }
 
+#game_card-big {
+  position: absolute;
+  height: 100vh;
+  width: 24vw;
+  z-index: 42;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 .left_card {
   left: 0;
 }
@@ -519,9 +530,9 @@
   display: flex;
   justify-content: center;
   align-content: center;
-  width: 50%;
+  width: 131%;
   height: 100%;
-  left: 75%;
+  left: 0;
   text-align: center;
   z-index: 21;
   display: flex;
@@ -751,4 +762,20 @@
 
 .roster_abil_description.left {
   left: -23% !important;
+}
+
+.roster_abil_name.left {
+  padding-left: 10% !important;
+}
+
+.miniGameCard.left {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.miniGameCard.right {
+  position: absolute;
+  right: 0;
+  top: 0;
 }
