--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -283,7 +283,7 @@ body{
         border-left: $size solid $color;
     }
 }
-.miniCard{
+.miniGameCard{
     width:10vw;
     height:100vh;
     background-color:darkslategrey;
@@ -332,10 +332,13 @@ body{
 .puller.right{
     border-radius: 50% 0 0 50%;
     top:-43vh;
-    left:-40%;
+    left:-11vh;
 }
 .puller.left{
     border-radius: 0 50% 50% 0;
     top:-36vh;
     right:-80%;
+}
+.roster_abil_desc.left{
+    padding-right:29%!important;
 }
