--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -342,3 +342,15 @@ body{
 .roster_abil_desc.left{
     padding-right:29%!important;
 }
+$sizes:1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17;
+@for $i from 1 through 18 {
+    .hexagrama-#{$i}{
+        @include hexagonomicron($i)
+    }
+}
+.list.left.tray, .list.right.tray{
+    .smallCard{margin:0}
+    margin: auto auto !important;
+    width:90%;
+    max-width:90%;
+}
