--- a/client/styles/gameCard.scss
+++ b/client/styles/gameCard.scss
@@ -210,7 +210,7 @@ $white: white;
 #game_card{
     position:absolute;
     height:100vh;
-    width:24vw;
+    //width:24vw;
     z-index:42;@include instaFlex;
     flex-wrap: wrap;
 }
