--- a/client/styles/gameEffects.css
+++ b/client/styles/gameEffects.css
@@ -116,3 +116,52 @@
     box-shadow: 0 0 0.5vw 0.48vw #49bb08, 0 0 0.5vw 0.4vw inset #49bb08;
   }
 }
+
+@keyframes popbigAndSmall {
+  10% {
+    transform: scale(0.7);
+  }
+  26% {
+    transform: scale(1.3);
+  }
+  48% {
+    transform: scale(0.9);
+  }
+  76% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.selected-model {
+  box-shadow: 0 0 3vh #0870b8, 0 0 1vh #0870b8, 0 0 2.5vh #0870b8, 0 0 2vh #0870b8;
+  z-index: 10;
+  animation: forwards 2s popbigAndSmall;
+}
+
+.selected-enemy-model {
+  box-shadow: 0 0 3vh #ee4135, 0 0 1vh #ee4135, 0 0 2.5vh #ee4135, 0 0 2vh #ee4135;
+  z-index: 10;
+  animation: forwards 2s popbigAndSmall;
+}
+
+@keyframes coinPulse {
+  25% {
+    transform: scale(1.1);
+  }
+  75% {
+    transform: scale(0.8);
+  }
+}
+
+#coin {
+  width: 1px;
+  height: 1px;
+  margin: auto auto;
+  border-radius: 50%;
+  background-color: goldenrod;
+  box-shadow: 0 0 1vh 2vh goldenrod;
+  animation: alternate infinite 4s coinPulse;
+}
