ability to deploy team limited to box containing the team, boxes containing team can be now switched between as long as they contain their starting ammount of squaddies. Time to get server involved.

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1754,3 +1754,11 @@ body {
   left: -17%;
   z-index: 2;
 }
+
+.teamBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  height: 29%;
+}
