--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -368,3 +368,8 @@ $sizes:1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,30;
     left: -17%;
     z-index:2;
 }
+.teamBox{
+    @include instaFlex;
+    flex-wrap: wrap;
+    height:29%;
+}
