--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Cardo:500i,500,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Cardo:500i,500,700|Bungee+Inline|Shojumaru&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -1761,4 +1761,81 @@ body {
   align-items: center;
   flex-wrap: wrap;
   height: 29%;
+}
+
+.gameTip {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.685);
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  z-index: 24;
+  top: 0;
+  left: 0;
+}
+
+.gameTipContent {
+  width: 71vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  background-color: #bdb10a;
+}
+
+.displayWhoStarts {
+  background-color: #0494ad;
+  border: 1px solid #2f54cf;
+  width: 27vh;
+  height: 27vh;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Bungee Inline", cursive;
+  color: rgba(3, 7, 31, 0.932);
+  font-size: 340%;
+}
+
+.displayWhoStarts sup {
+  margin-top: -24%;
+  font-family: "Bungee Inline", cursive;
+  font-size: 40%;
+}
+
+.scenarioBody {
+  width: calc(100% - 30vh);
+  height: 69%;
+  border-color: 1px solid green;
+  padding: 2vh;
+}
+
+.scenarioTitle {
+  display: flex;
+  justify-content: center;
+  font-size: 164%;
+  font-weight: 900;
+  font-family: "Shojumaru", cursive;
+}
+
+.deploymentMyOptions {
+  width: 100%;
+  height: 50%;
+  padding: 2vh;
+}
+
+.flashNews {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgba(0, 0, 0, 0.911);
+  text-shadow: 0 0 1vh darkorange, 0 0 1.5vh darkorange, 0 0 2vh darkorange, 0 0 2.5vh darkorange, 0 0 3vh darkorange;
+  font-size: 300%;
+  font-weight: 900;
+  font-family: "Shojumaru", cursive;
+  position: absolute;
+  z-index: 23;
+  margin: auto auto;
 }
