--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Cardo:500i,500,700&display=swap');
+//@import url('https://fonts.googleapis.com/css?family=Cardo:500i,500,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Cardo:500i,500,700|Bungee+Inline|Shojumaru&display=swap');
+$coinFont1: 'Bungee Inline', cursive;
+$coinFont2: 'Shojumaru', cursive;
 *{
     margin:0;
     padding:0;
@@ -372,4 +375,67 @@ $sizes:1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,30;
     @include instaFlex;
     flex-wrap: wrap;
     height:29%;
+}
+.gameTip{
+    @include instaFlex;
+    background-color: rgba(0, 0, 0, 0.685);
+    width:100vw;
+    height: 100vh;
+    position:absolute;
+    z-index:24;
+    top:0;
+    left:0;
+}
+.gameTipContent{
+    width: 71vw;
+    @include instaFlex;
+    flex-wrap: wrap;
+    background-color: rgb(189, 177, 10);
+}
+.displayWhoStarts{
+    sup{
+        margin-top:-24%;
+        font-family: $coinFont1;
+        font-size:40%;
+    }
+    background-color:rgb(4, 148, 173);
+    border: 1px solid rgb(47, 84, 207);
+    width:27vh;
+    height:27vh;
+    border-radius: 50%;
+    @include instaFlex;
+    font-family: $coinFont1;
+    color: rgba(3, 7, 31, 0.932);
+    font-size: 340%;
+  //  font-weight: 900;
+ //   text-shadow: 3px 3px rgba(76, 30, 130, 0.856);
+}
+.scenarioBody{
+    width:calc(100% - 30vh);
+    height:69%;
+    border-color: 1px solid green;
+    padding:2vh;
+}
+.scenarioTitle{
+    display: flex;
+    justify-content: center;
+    font-size: 164%;
+    font-weight: 900;
+    font-family: $coinFont2;
+}
+.deploymentMyOptions{
+    width:100%;
+    height:50%;
+    padding:2vh;
+}
+.flashNews{
+    @include instaFlex;
+    color:rgba(0, 0, 0, 0.911);
+    text-shadow: 0 0 1vh darkorange, 0 0 1.5vh darkorange, 0 0 2vh darkorange, 0 0 2.5vh darkorange, 0 0 3vh darkorange;
+    font-size: 300%;
+    font-weight: 900;
+    font-family: $coinFont2;
+    position:absolute;
+    z-index:23;
+    margin:auto auto;
 }
