--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -353,6 +353,24 @@ $sizes:1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,30;
         @include hexagonomicron($i)
     }
 }
+.smallCard.whiteTeam.hexagrama-30.unitModel{
+    box-shadow: 0 0 3vh white, 0 0 4vh white !important;
+    .top.whiteTeam{
+        box-shadow:0 0 4vh white, 0 0 5vh white !important;
+    }
+    .bottom.whiteTeam{
+        box-shadow: 0 0 4vh white, 0 0 5vh white !important;
+    }
+}
+.smallCard.blackTeam.hexagrama-30.unitModel{
+    box-shadow:0 0 3vh black, 0 0 4vh black !important;
+    .top.blackTeam{
+        box-shadow: 0 0 4vh black, 0 0 5vh black !important;
+    }
+    .bottom.blackTeam{
+        box-shadow: 0 0 4vh black, 0 0 5vh black !important;
+    }
+}
 .list.left.tray, .list.right.tray{
     .smallCard{margin:0}
     margin: auto auto !important;
@@ -360,7 +378,7 @@ $sizes:1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,30;
     max-width:90%;
 }
 .unitModel{
-    transform:scale(30%);
+    transform:scale(35%);
     z-index:2;
     margin:auto -47%!important;
 
@@ -438,4 +456,11 @@ $sizes:1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,30;
     position:absolute;
     z-index:23;
     margin:auto auto;
+}
+
+.whiteTeam{
+    box-shadow: 0 0 1vh white, 0 0 1.2vh white;
+}
+.blackTeam{
+    box-shadow: 0 0 1vh black, 0 0 1.2vh black;
 }
