--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1871,3 +1871,29 @@ body {
 .blackTeam {
   box-shadow: 0 0 1vh black, 0 0 1.2vh black;
 }
+
+.selectedModel.hexagrama-14.champModel {
+  animation: 2s alternate infinite pulsec;
+}
+
+@keyframes pulsec {
+  0% {
+    transform: scale(90%);
+  }
+  100% {
+    transform: scale(110%);
+  }
+}
+
+.selectedModel.hexagrama-30.unitModel {
+  animation: 2s alternate infinite pulseg;
+}
+
+@keyframes pulseg {
+  0% {
+    transform: scale(25%);
+  }
+  100% {
+    transform: scale(45%);
+  }
+}
