--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -464,3 +464,31 @@ $sizes:1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,30;
 .blackTeam{
     box-shadow: 0 0 1vh black, 0 0 1.2vh black;
 }
+@mixin pulseChamp ($a, $b){
+    @keyframes pulsec {
+        0%{
+            transform:scale($a)
+        }
+        100%{
+            transform:scale($b)
+        }
+    }
+    animation: 2s alternate infinite pulsec;
+}
+@mixin pulseGrunt ($a, $b){
+    @keyframes pulseg {
+        0%{
+            transform:scale($a)
+        }
+        100%{
+            transform:scale($b)
+        }
+    }
+    animation: 2s alternate infinite pulseg;
+}
+.selectedModel.hexagrama-14.champModel{
+    @include pulseChamp(90%,110%);
+}
+.selectedModel.hexagrama-30.unitModel{
+    @include pulseGrunt(25%,45%);
+}
