--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -493,8 +493,10 @@ $sizes:1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,30;
     @include pulseGrunt(25%,45%);
 }
 .hexagon .claimedBanner{
+    border-radius: 50%;
     z-index: 3;
     position: relative;
     left: 0%;
     top: 0%;
+    transform:scale(120%);
 }
