added: kick for blackjaw, displaying damage, removing models, displaying abilities reach, calling abilities before server and after server, ladder broken.

--- a/client/styles/gameCard.css
+++ b/client/styles/gameCard.css
@@ -2,10 +2,17 @@
   position: absolute;
   height: 100vh;
   z-index: 42;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 #game_card-big {
@@ -13,10 +20,17 @@
   height: 100vh;
   width: 24vw;
   z-index: 42;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .left_card {
@@ -30,9 +44,15 @@
 
 .game_card-portrait {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 28vh;
   min-height: 10vw;
   max-height: 20vw;
@@ -40,10 +60,18 @@
 
 .game_card-actions {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  justify-content: space-evenly;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   height: 17vh;
   min-height: 5vw;
   max-height: 10vw;
@@ -51,19 +79,30 @@
 
 .game_card-skill_list {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   height: 48vh;
   min-height: 20vw;
   max-height: 40vw;
   overflow-y: scroll;
   pointer-events: auto;
+  min-height: -webkit-min-content;
+  min-height: -moz-min-content;
   min-height: min-content;
 }
 
 .game_card-skill_list .card_list_item_black {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 46vw;
   height: auto;
@@ -75,7 +114,8 @@
   font-size: 85%;
   background-color: black;
   color: white;
-  box-shadow: inset 0 0 3vh white, 0 0 2vh black;
+  -webkit-box-shadow: inset 0 0 3vh white, 0 0 2vh black;
+          box-shadow: inset 0 0 3vh white, 0 0 2vh black;
   text-shadow: 0 0 2vh black, 0 0 1vh black, 0 0 1.5vh #3a0e0e;
 }
 
@@ -83,7 +123,9 @@
   margin: 1vh -2vw;
   min-height: 10vh;
   max-height: 11vh;
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   border-radius: 50%;
   background-repeat: no-repeat;
   background-size: contain;
@@ -97,7 +139,9 @@
   margin: 1vh -2vw;
   min-height: 10vh;
   max-height: 11vh;
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   border-radius: 50%;
   background-repeat: no-repeat;
   background-size: contain;
@@ -111,7 +155,9 @@
   margin: 1vh -2vw;
   min-height: 10vh;
   max-height: 11vh;
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   border-radius: 50%;
   background-repeat: no-repeat;
   background-size: contain;
@@ -125,7 +171,9 @@
   margin: 1vh -2vw;
   min-height: 10vh;
   max-height: 11vh;
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   border-radius: 50%;
   background-repeat: no-repeat;
   background-size: contain;
@@ -146,7 +194,9 @@
   font-size: 110%;
   font-weight: 700;
   letter-spacing: .04vw;
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .game_card-skill_list .card_list_item_black .roster_description .roster_abil_desc {
@@ -161,10 +211,14 @@
 }
 
 .game_card-skill_list .card_list_item_black .roster_abil_stats {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   min-width: 15%;
   max-width: 20%;
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .game_card-skill_list .card_list_item_black .roster_abil_stats .roster_abil_column {
@@ -179,9 +233,15 @@
 }
 
 .game_card-skill_list .card_list_item_black .roster_abil_stats .roster_abil_column .roster_abil_number {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 25%;
 }
 
@@ -198,6 +258,8 @@
 }
 
 .game_card-skill_list .card_list_item_white {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 46vw;
   height: auto;
@@ -209,7 +271,8 @@
   font-size: 85%;
   background-color: white;
   color: black;
-  box-shadow: inset 0 0 3vh black, 0 0 2vh black;
+  -webkit-box-shadow: inset 0 0 3vh black, 0 0 2vh black;
+          box-shadow: inset 0 0 3vh black, 0 0 2vh black;
   text-shadow: 0 0 2vh white, 0 0 1vh white, 0 0 1.5vh #a4e6e0;
 }
 
@@ -217,7 +280,9 @@
   margin: 1vh -2vw;
   min-height: 10vh;
   max-height: 11vh;
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   border-radius: 50%;
   background-repeat: no-repeat;
   background-size: contain;
@@ -231,7 +296,9 @@
   margin: 1vh -2vw;
   min-height: 10vh;
   max-height: 11vh;
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   border-radius: 50%;
   background-repeat: no-repeat;
   background-size: contain;
@@ -245,7 +312,9 @@
   margin: 1vh -2vw;
   min-height: 10vh;
   max-height: 11vh;
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   border-radius: 50%;
   background-repeat: no-repeat;
   background-size: contain;
@@ -259,7 +328,9 @@
   margin: 1vh -2vw;
   min-height: 10vh;
   max-height: 11vh;
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   border-radius: 50%;
   background-repeat: no-repeat;
   background-size: contain;
@@ -280,7 +351,9 @@
   font-size: 110%;
   font-weight: 700;
   letter-spacing: .04vw;
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .game_card-skill_list .card_list_item_white .roster_description .roster_abil_desc {
@@ -295,10 +368,14 @@
 }
 
 .game_card-skill_list .card_list_item_white .roster_abil_stats {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   min-width: 15%;
   max-width: 20%;
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .game_card-skill_list .card_list_item_white .roster_abil_stats .roster_abil_column {
@@ -313,9 +390,15 @@
 }
 
 .game_card-skill_list .card_list_item_white .roster_abil_stats .roster_abil_column .roster_abil_number {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 25%;
 }
 
@@ -332,10 +415,12 @@
 }
 
 .card_shadow-left {
+  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 4, 36, 0.77)), color-stop(35%, rgba(3, 5, 60, 0.637)), to(rgba(0, 26, 255, 0.012)));
   background: linear-gradient(90deg, rgba(0, 4, 36, 0.77) 0%, rgba(3, 5, 60, 0.637) 35%, rgba(0, 26, 255, 0.012) 100%);
 }
 
 .card_shadow-right {
+  background: -webkit-gradient(linear, right top, left top, from(rgba(0, 4, 36, 0.77)), color-stop(35%, rgba(3, 5, 60, 0.637)), to(rgba(0, 26, 255, 0.012)));
   background: linear-gradient(270deg, rgba(0, 4, 36, 0.77) 0%, rgba(3, 5, 60, 0.637) 35%, rgba(0, 26, 255, 0.012) 100%);
 }
 
@@ -377,7 +462,6 @@
   height: 12.40526vh;
   overflow: hidden;
   -webkit-transform: scaleY(0.5774) rotate(-45deg);
-  -ms-transform: scaleY(0.5774) rotate(-45deg);
   transform: scaleY(0.5774) rotate(-45deg);
   background: inherit;
   left: 1.34035vh;
@@ -389,10 +473,8 @@
   width: 15.08772vh;
   height: 8.71053vh;
   -webkit-transform: rotate(45deg) scaleY(1.7321) translateY(-4.35546vh);
-  -ms-transform: rotate(45deg) scaleY(1.7321) translateY(-4.35546vh);
   transform: rotate(45deg) scaleY(1.7321) translateY(-4.35546vh);
   -webkit-transform-origin: 0 0;
-  -ms-transform-origin: 0 0;
   transform-origin: 0 0;
   background: inherit;
 }
@@ -419,9 +501,15 @@
 
 .game_card-attribs {
   width: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 100%;
 }
 
@@ -484,7 +572,6 @@
   height: 6.42818vh;
   overflow: hidden;
   -webkit-transform: scaleY(0.5774) rotate(-45deg);
-  -ms-transform: scaleY(0.5774) rotate(-45deg);
   transform: scaleY(0.5774) rotate(-45deg);
   background: inherit;
   left: 0.69455vh;
@@ -496,10 +583,8 @@
   width: 7.81818vh;
   height: 4.51364vh;
   -webkit-transform: rotate(45deg) scaleY(1.7321) translateY(-2.25692vh);
-  -ms-transform: rotate(45deg) scaleY(1.7321) translateY(-2.25692vh);
   transform: rotate(45deg) scaleY(1.7321) translateY(-2.25692vh);
   -webkit-transform-origin: 0 0;
-  -ms-transform-origin: 0 0;
   transform-origin: 0 0;
   background: inherit;
 }
@@ -526,9 +611,14 @@
 
 .game_card-attrib p {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
   width: 131%;
   height: 100%;
   left: 0;
@@ -536,7 +626,9 @@
   z-index: 21;
   display: flex;
   justify-content: center;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 130%;
   font-weight: 900;
 }
@@ -657,16 +749,23 @@
 
 .smallCard p {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
   width: 100%;
   height: 100%;
   text-align: center;
   z-index: 21;
   display: flex;
   justify-content: center;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-size: 130%;
   font-weight: 900;
 }
@@ -678,7 +777,8 @@
 .list .img_skull_black {
   background-color: black;
   color: white;
-  box-shadow: inset 0 0 3vh white, 0 0 2vh black;
+  -webkit-box-shadow: inset 0 0 3vh white, 0 0 2vh black;
+          box-shadow: inset 0 0 3vh white, 0 0 2vh black;
   text-shadow: 0 0 2vh black, 0 0 1vh black, 0 0 1.5vh #3a0e0e;
   background: center/115% no-repeat url("../img/skull_black.png");
   font-size: 79%;
@@ -688,7 +788,8 @@
 .list .img_self_black {
   background-color: black;
   color: white;
-  box-shadow: inset 0 0 3vh white, 0 0 2vh black;
+  -webkit-box-shadow: inset 0 0 3vh white, 0 0 2vh black;
+          box-shadow: inset 0 0 3vh white, 0 0 2vh black;
   text-shadow: 0 0 2vh black, 0 0 1vh black, 0 0 1.5vh #3a0e0e;
   background: center/115% no-repeat url("../img/self_black.png");
   font-size: 79%;
@@ -698,7 +799,8 @@
 .list .img_star_black {
   background-color: black;
   color: white;
-  box-shadow: inset 0 0 3vh white, 0 0 2vh black;
+  -webkit-box-shadow: inset 0 0 3vh white, 0 0 2vh black;
+          box-shadow: inset 0 0 3vh white, 0 0 2vh black;
   text-shadow: 0 0 2vh black, 0 0 1vh black, 0 0 1.5vh #3a0e0e;
   background: center/115% no-repeat url("../img/star_black.png");
   font-size: 79%;
@@ -708,7 +810,8 @@
 .list .img_cogs_black {
   background-color: black;
   color: white;
-  box-shadow: inset 0 0 3vh white, 0 0 2vh black;
+  -webkit-box-shadow: inset 0 0 3vh white, 0 0 2vh black;
+          box-shadow: inset 0 0 3vh white, 0 0 2vh black;
   text-shadow: 0 0 2vh black, 0 0 1vh black, 0 0 1.5vh #3a0e0e;
   background: center/115% no-repeat url("../img/cogs_black.png");
   font-size: 79%;
@@ -718,7 +821,8 @@
 .list .img_skull_white {
   background-color: white;
   color: black;
-  box-shadow: inset 0 0 3vh black, 0 0 2vh black;
+  -webkit-box-shadow: inset 0 0 3vh black, 0 0 2vh black;
+          box-shadow: inset 0 0 3vh black, 0 0 2vh black;
   text-shadow: 0 0 2vh white, 0 0 1vh white, 0 0 1.5vh #a4e6e0;
   background: center/115% no-repeat url("../img/skull_white.png");
   font-size: 79%;
@@ -728,7 +832,8 @@
 .list .img_self_white {
   background-color: white;
   color: black;
-  box-shadow: inset 0 0 3vh black, 0 0 2vh black;
+  -webkit-box-shadow: inset 0 0 3vh black, 0 0 2vh black;
+          box-shadow: inset 0 0 3vh black, 0 0 2vh black;
   text-shadow: 0 0 2vh white, 0 0 1vh white, 0 0 1.5vh #a4e6e0;
   background: center/115% no-repeat url("../img/self_white.png");
   font-size: 79%;
@@ -738,7 +843,8 @@
 .list .img_star_white {
   background-color: white;
   color: black;
-  box-shadow: inset 0 0 3vh black, 0 0 2vh black;
+  -webkit-box-shadow: inset 0 0 3vh black, 0 0 2vh black;
+          box-shadow: inset 0 0 3vh black, 0 0 2vh black;
   text-shadow: 0 0 2vh white, 0 0 1vh white, 0 0 1.5vh #a4e6e0;
   background: center/115% no-repeat url("../img/star_white.png");
   font-size: 79%;
@@ -748,7 +854,8 @@
 .list .img_cogs_white {
   background-color: white;
   color: black;
-  box-shadow: inset 0 0 3vh black, 0 0 2vh black;
+  -webkit-box-shadow: inset 0 0 3vh black, 0 0 2vh black;
+          box-shadow: inset 0 0 3vh black, 0 0 2vh black;
   text-shadow: 0 0 2vh white, 0 0 1vh white, 0 0 1.5vh #a4e6e0;
   background: center/115% no-repeat url("../img/cogs_white.png");
   font-size: 79%;
@@ -778,3 +885,4 @@
   right: 0;
   top: 0;
 }
+/*# sourceMappingURL=gameCard.css.map */
