--- a/client/styles/gameEffects.scss
+++ b/client/styles/gameEffects.scss
@@ -62,6 +62,9 @@
 .greenGlow{
     @include makeGlow('green', rgb(81, 255, 0), rgb(0, 240, 12), rgb(84, 155, 67), rgb(73, 187, 8))
 }
+.legendaryGlow{
+    @include makeGlow('goldenrod', goldenrod, goldenrod, goldenrod, goldenrod)
+}
 .claimColor{
     @include makeGlow('white', rgb(245, 245, 245), rgb(194, 197, 194), rgb(243, 243, 243), rgb(238, 250, 231))
 }
@@ -97,3 +100,54 @@ $selectedByEnemyGlow:rgba(238, 65, 53, 1);
     box-shadow: 0 0 1vh 2vh rgba(218, 165, 32, 1);
     animation: alternate infinite 4s coinPulse;
 }
+[data-glow="redGlow"]{
+    @include makeGlow('red', rgb(255, 0, 0), rgb(175, 0, 0), rgb(187, 0, 93), rgb(201, 44, 109))
+}
+[data-glow="blueGlow"]{
+    @include makeGlow('blue', rgb(0, 38, 255), rgb(0, 175, 152), rgb(0, 187, 156), rgb(110, 78, 196))
+}
+[data-glow="yellowGlow"]{
+    @include makeGlow('yellow', rgb(238, 255, 0), rgb(236, 240, 0), rgb(252, 238, 119), rgb(255, 251, 42))
+}
+[data-glow="greenGlow"]{
+    @include makeGlow('green', rgb(81, 255, 0), rgb(0, 240, 12), rgb(84, 155, 67), rgb(73, 187, 8))
+}
+[data-glow="legendaryGlow"]{
+    @include makeGlow('goldenrod', goldenrod, goldenrod, goldenrod, goldenrod)
+}
+[data-glow="claimColor"]{
+    @include makeGlow('white', rgb(245, 245, 245), rgb(194, 197, 194), rgb(243, 243, 243), rgb(238, 250, 231))
+}
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
+
+  .shakeModel.champModel{
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+  }
+  @keyframes deathGrip {
+    0%{
+      filter:grayscale(0)
+    }
+      100%{
+        filter:grayscale(.77)
+      }
+  }
+  .death{
+      animation: forwards 1s deathGrip;
+  }
+
+  .resurrecting{
+      animation: reverse 1s deathGrip;
+  }
